import "Governance.proto";
import "Common.proto";

package i2OWater.Anapos.Governance.EnterpriseEvents.Support;

message ExecutionInConsoleComplete {
  required i2OWater.Anapos.Governance.EnterpriseEvent root_event = 1;
  required string execution_id = 2;
  required string external_username = 3;
  required string external_user_id = 4;
  required string command = 5;
  required string standard_output = 6;
  required string warning_output = 7;
  required string error_output = 8;
  repeated string file_input_names = 9;
  repeated i2OWater.Anapos.Governance.Common.Pair file_output = 10;
  extensions 100 to 120; 
}